--- a/css/output.css
+++ b/css/output.css
@@ -1096,10 +1096,6 @@ video {
   width: 12rem;
 }
 
-.w-\[10\%\] {
-  width: 10%;
-}
-
 .w-\[100\%\] {
   width: 100%;
 }
@@ -1126,6 +1122,10 @@ video {
 
 .w-\[25\%\] {
   width: 25%;
+}
+
+.w-\[30\%\] {
+  width: 30%;
 }
 
 .w-\[300px\] {
@@ -1586,6 +1586,10 @@ video {
   grid-template-columns: repeat(4, minmax(0, 1fr));
 }
 
+.grid-cols-5 {
+  grid-template-columns: repeat(5, minmax(0, 1fr));
+}
+
 .grid-rows-1 {
   grid-template-rows: repeat(1, minmax(0, 1fr));
 }
@@ -1866,20 +1870,20 @@ video {
   gap: 50px;
 }
 
+.gap-\[5px\] {
+  gap: 5px;
+}
+
+.gap-\[60px\] {
+  gap: 60px;
+}
+
 .gap-\[65px\] {
   gap: 65px;
 }
 
 .gap-\[8px\] {
   gap: 8px;
-}
-
-.gap-\[\] {
-  gap: ;
-}
-
-.gap-\[mm\] {
-  gap: mm;
 }
 
 .space-x-2 > :not([hidden]) ~ :not([hidden]) {
@@ -2408,6 +2412,10 @@ video {
   border-color: rgb(156 163 175 / var(--tw-border-opacity));
 }
 
+.bg-\[\#00000129\] {
+  background-color: #00000129;
+}
+
 .bg-\[\#01C38D\] {
   --tw-bg-opacity: 1;
   background-color: rgb(1 195 141 / var(--tw-bg-opacity));
@@ -2436,6 +2444,11 @@ video {
 .bg-\[\#2B88E7\] {
   --tw-bg-opacity: 1;
   background-color: rgb(43 136 231 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#35d49a\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(53 212 154 / var(--tw-bg-opacity));
 }
 
 .bg-\[\#53DEBD\] {
@@ -2481,6 +2494,11 @@ video {
 .bg-\[rgb\(255\2c 0\2c 0\)\] {
   --tw-bg-opacity: 1;
   background-color: rgb(255 0 0 / var(--tw-bg-opacity));
+}
+
+.bg-gray-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(107 114 128 / var(--tw-bg-opacity));
 }
 
 .bg-green-600 {
@@ -2731,9 +2749,19 @@ video {
   padding-right: 18px;
 }
 
+.px-\[1rem\] {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
 .px-\[20px\] {
   padding-left: 20px;
   padding-right: 20px;
+}
+
+.px-\[25px\] {
+  padding-left: 25px;
+  padding-right: 25px;
 }
 
 .px-\[2rem\] {
@@ -2821,6 +2849,11 @@ video {
   padding-bottom: 10px;
 }
 
+.py-\[10rem\] {
+  padding-top: 10rem;
+  padding-bottom: 10rem;
+}
+
 .py-\[12px\] {
   padding-top: 12px;
   padding-bottom: 12px;
@@ -2839,6 +2872,11 @@ video {
 .py-\[18px\] {
   padding-top: 18px;
   padding-bottom: 18px;
+}
+
+.py-\[1px\] {
+  padding-top: 1px;
+  padding-bottom: 1px;
 }
 
 .py-\[1rem\] {
@@ -2906,6 +2944,11 @@ video {
   padding-bottom: 6rem;
 }
 
+.py-\[7rem\] {
+  padding-top: 7rem;
+  padding-bottom: 7rem;
+}
+
 .py-\[8px\] {
   padding-top: 8px;
   padding-bottom: 8px;
@@ -2914,26 +2957,6 @@ video {
 .py-\[8rem\] {
   padding-top: 8rem;
   padding-bottom: 8rem;
-}
-
-.py-\[7rem\] {
-  padding-top: 7rem;
-  padding-bottom: 7rem;
-}
-
-.px-\[\] {
-  padding-left: ;
-  padding-right: ;
-}
-
-.py-\[\] {
-  padding-top: ;
-  padding-bottom: ;
-}
-
-.py-\[10rem\] {
-  padding-top: 10rem;
-  padding-bottom: 10rem;
 }
 
 .pb-\[12px\] {
@@ -2946,6 +2969,10 @@ video {
 
 .pb-\[25px\] {
   padding-bottom: 25px;
+}
+
+.pb-\[32px\] {
+  padding-bottom: 32px;
 }
 
 .pl-\[10px\] {
@@ -2964,12 +2991,24 @@ video {
   padding-right: 35px;
 }
 
+.pt-\[26px\] {
+  padding-top: 26px;
+}
+
 .pt-\[2rem\] {
   padding-top: 2rem;
 }
 
 .pt-\[4rem\] {
   padding-top: 4rem;
+}
+
+.pl-\[50px\] {
+  padding-left: 50px;
+}
+
+.pl-\[20px\] {
+  padding-left: 20px;
 }
 
 .text-left {
@@ -3098,6 +3137,10 @@ video {
 
 .text-\[30px\] {
   font-size: 30px;
+}
+
+.text-\[35px\] {
+  font-size: 35px;
 }
 
 .text-\[40px\] {
@@ -3275,9 +3318,18 @@ video {
   color: rgb(51 102 153 / .35);
 }
 
+.text-\[\#35d49a\] {
+  --tw-text-opacity: 1;
+  color: rgb(53 212 154 / var(--tw-text-opacity));
+}
+
 .text-\[\#7c818b\] {
   --tw-text-opacity: 1;
   color: rgb(124 129 139 / var(--tw-text-opacity));
+}
+
+.text-\[\#\] {
+  color: #;
 }
 
 .text-\[\#aaa\] {
@@ -3293,6 +3345,10 @@ video {
 .text-\[\#fff\] {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.text-\[\] {
+  color: ;
 }
 
 .text-black {
@@ -3338,10 +3394,6 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.text-\[\] {
-  color: ;
 }
 
 .underline {
@@ -4105,6 +4157,11 @@ video {
 
   .md\:text-lg {
     font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
+
+  .md\:text-xl {
+    font-size: 1.25rem;
     line-height: 1.75rem;
   }
 
