--- a/css/output.css
+++ b/css/output.css
@@ -1019,6 +1019,10 @@ video {
   height: 25rem;
 }
 
+.h-\[270px\] {
+  height: 270px;
+}
+
 .h-\[30\%\] {
   height: 30%;
 }
@@ -1047,10 +1051,6 @@ video {
   height: 600px;
 }
 
-.h-\[720px\] {
-  height: 720px;
-}
-
 .h-\[85\%\] {
   height: 85%;
 }
@@ -1065,10 +1065,6 @@ video {
 
 .h-full {
   height: 100%;
-}
-
-.h-\[270px\] {
-  height: 270px;
 }
 
 .w-10 {
@@ -1103,20 +1099,12 @@ video {
   width: 2rem;
 }
 
-.w-\[10\%\] {
-  width: 10%;
-}
-
 .w-\[100\%\] {
   width: 100%;
 }
 
 .w-\[120\%\] {
   width: 120%;
-}
-
-.w-\[130\%\] {
-  width: 130%;
 }
 
 .w-\[140\%\] {
@@ -1165,10 +1153,6 @@ video {
 
 .w-\[45\%\] {
   width: 45%;
-}
-
-.w-\[5\%\] {
-  width: 5%;
 }
 
 .w-\[50\%\] {
@@ -1893,6 +1877,10 @@ video {
   gap: 50px;
 }
 
+.gap-\[5px\] {
+  gap: 5px;
+}
+
 .gap-\[60px\] {
   gap: 60px;
 }
@@ -1901,12 +1889,12 @@ video {
   gap: 65px;
 }
 
-.gap-\[8px\] {
-  gap: 8px;
+.gap-\[80px\] {
+  gap: 80px;
 }
 
-.gap-\[\] {
-  gap: ;
+.gap-\[8px\] {
+  gap: 8px;
 }
 
 .space-x-2 > :not([hidden]) ~ :not([hidden]) {
@@ -2446,6 +2434,10 @@ video {
 .border-white {
   --tw-border-opacity: 1;
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
+}
+
+.bg-\[\#00000129\] {
+  background-color: #00000129;
 }
 
 .bg-\[\#01C38D\] {
@@ -3025,6 +3017,10 @@ video {
   padding-left: 20px;
 }
 
+.pl-\[7rem\] {
+  padding-left: 7rem;
+}
+
 .pr-\[20px\] {
   padding-right: 20px;
 }
@@ -3037,6 +3033,10 @@ video {
   padding-top: 20px;
 }
 
+.pt-\[26px\] {
+  padding-top: 26px;
+}
+
 .pt-\[2rem\] {
   padding-top: 2rem;
 }
@@ -3047,14 +3047,6 @@ video {
 
 .pt-\[4rem\] {
   padding-top: 4rem;
-}
-
-.pl-\[50px\] {
-  padding-left: 50px;
-}
-
-.pl-\[20px\] {
-  padding-left: 20px;
 }
 
 .text-left {
@@ -3364,11 +3356,6 @@ video {
   color: rgb(25 200 151 / var(--tw-text-opacity));
 }
 
-.text-\[\#282a2c\] {
-  --tw-text-opacity: 1;
-  color: rgb(40 42 44 / var(--tw-text-opacity));
-}
-
 .text-\[\#336699\]\/\[\.35\] {
   color: rgb(51 102 153 / .35);
 }
@@ -3381,6 +3368,10 @@ video {
 .text-\[\#7c818b\] {
   --tw-text-opacity: 1;
   color: rgb(124 129 139 / var(--tw-text-opacity));
+}
+
+.text-\[\#\] {
+  color: #;
 }
 
 .text-\[\#a1a1a1\] {
@@ -3401,10 +3392,6 @@ video {
 .text-\[\#fff\] {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.text-\[\] {
-  color: ;
 }
 
 .text-black {
@@ -3459,6 +3446,10 @@ video {
 .text-yellow-200 {
   --tw-text-opacity: 1;
   color: rgb(254 240 138 / var(--tw-text-opacity));
+}
+
+.text-\[\] {
+  color: ;
 }
 
 .underline {
@@ -3970,10 +3961,6 @@ video {
     height: 50vh;
   }
 
-  .sm\:h-\[700px\] {
-    height: 700px;
-  }
-
   .sm\:w-\[100\%\] {
     width: 100%;
   }
@@ -4104,10 +4091,6 @@ video {
 
   .md\:h-\[30\%\] {
     height: 30%;
-  }
-
-  .md\:h-\[300px\] {
-    height: 300px;
   }
 
   .md\:h-\[30px\] {
@@ -4250,16 +4233,8 @@ video {
     gap: 250px;
   }
 
-  .md\:gap-\[50px\] {
-    gap: 50px;
-  }
-
   .md\:gap-\[70px\] {
     gap: 70px;
-  }
-
-  .md\:gap-\[150px\] {
-    gap: 150px;
   }
 
   .md\:border-none {
@@ -4457,10 +4432,6 @@ video {
 
   .lg\:w-full {
     width: 100%;
-  }
-
-  .lg\:w-\[\] {
-    width: ;
   }
 
   .lg\:grid-cols-4 {
