--- a/css/output.css
+++ b/css/output.css
@@ -995,6 +995,10 @@ video {
   height: 100px;
 }
 
+.h-\[110vh\] {
+  height: 110vh;
+}
+
 .h-\[120vh\] {
   height: 120vh;
 }
@@ -1055,24 +1059,12 @@ video {
   height: 85%;
 }
 
-.h-\[90vh\] {
-  height: 90vh;
-}
-
 .h-auto {
   height: auto;
 }
 
 .h-full {
   height: 100%;
-}
-
-.h-\[100vh\] {
-  height: 100vh;
-}
-
-.h-\[110vh\] {
-  height: 110vh;
 }
 
 .w-10 {
@@ -1105,10 +1097,6 @@ video {
 
 .w-8 {
   width: 2rem;
-}
-
-.w-\[10\%\] {
-  width: 10%;
 }
 
 .w-\[100\%\] {
@@ -1169,10 +1157,6 @@ video {
 
 .w-\[45\%\] {
   width: 45%;
-}
-
-.w-\[5\%\] {
-  width: 5%;
 }
 
 .w-\[50\%\] {
@@ -1897,6 +1881,10 @@ video {
   gap: 50px;
 }
 
+.gap-\[5px\] {
+  gap: 5px;
+}
+
 .gap-\[60px\] {
   gap: 60px;
 }
@@ -2281,6 +2269,11 @@ video {
   border-bottom-right-radius: 0.25rem;
 }
 
+.rounded-r-md {
+  border-top-right-radius: 0.375rem;
+  border-bottom-right-radius: 0.375rem;
+}
+
 .rounded-s {
   border-start-start-radius: 0.25rem;
   border-end-start-radius: 0.25rem;
@@ -2446,6 +2439,10 @@ video {
 .border-white {
   --tw-border-opacity: 1;
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
+}
+
+.bg-\[\#00000129\] {
+  background-color: #00000129;
 }
 
 .bg-\[\#01C38D\] {
@@ -2720,6 +2717,10 @@ video {
 
 .p-\[30px\] {
   padding: 30px;
+}
+
+.p-\[8px\] {
+  padding: 8px;
 }
 
 .px-10 {
@@ -3037,6 +3038,10 @@ video {
   padding-top: 20px;
 }
 
+.pt-\[26px\] {
+  padding-top: 26px;
+}
+
 .pt-\[2rem\] {
   padding-top: 2rem;
 }
@@ -3047,14 +3052,6 @@ video {
 
 .pt-\[4rem\] {
   padding-top: 4rem;
-}
-
-.pl-\[50px\] {
-  padding-left: 50px;
-}
-
-.pl-\[20px\] {
-  padding-left: 20px;
 }
 
 .text-left {
@@ -3332,8 +3329,8 @@ video {
   line-height: 2rem;
 }
 
-.leading-\[50px\] {
-  line-height: 50px;
+.leading-\[40px\] {
+  line-height: 40px;
 }
 
 .leading-\[56px\] {
@@ -3342,10 +3339,6 @@ video {
 
 .leading-tight {
   line-height: 1.25;
-}
-
-.leading-\[40px\] {
-  line-height: 40px;
 }
 
 .text-\[\#01C38D\] {
@@ -3363,14 +3356,29 @@ video {
   color: rgb(18 227 188 / var(--tw-text-opacity));
 }
 
+.text-\[\#1877F2\] {
+  --tw-text-opacity: 1;
+  color: rgb(24 119 242 / var(--tw-text-opacity));
+}
+
 .text-\[\#19C897\] {
   --tw-text-opacity: 1;
   color: rgb(25 200 151 / var(--tw-text-opacity));
 }
 
-.text-\[\#282a2c\] {
+.text-\[\#1DA1F2\] {
   --tw-text-opacity: 1;
-  color: rgb(40 42 44 / var(--tw-text-opacity));
+  color: rgb(29 161 242 / var(--tw-text-opacity));
+}
+
+.text-\[\#26A5E4\] {
+  --tw-text-opacity: 1;
+  color: rgb(38 165 228 / var(--tw-text-opacity));
+}
+
+.text-\[\#2867B2\] {
+  --tw-text-opacity: 1;
+  color: rgb(40 103 178 / var(--tw-text-opacity));
 }
 
 .text-\[\#336699\]\/\[\.35\] {
@@ -3382,9 +3390,33 @@ video {
   color: rgb(53 212 154 / var(--tw-text-opacity));
 }
 
+.text-\[\#69C9D0\] {
+  --tw-text-opacity: 1;
+  color: rgb(105 201 208 / var(--tw-text-opacity));
+}
+
+.text-\[\#7289da\] {
+  --tw-text-opacity: 1;
+  color: rgb(114 137 218 / var(--tw-text-opacity));
+}
+
 .text-\[\#7c818b\] {
   --tw-text-opacity: 1;
   color: rgb(124 129 139 / var(--tw-text-opacity));
+}
+
+.text-\[\#C13584\] {
+  --tw-text-opacity: 1;
+  color: rgb(193 53 132 / var(--tw-text-opacity));
+}
+
+.text-\[\#FF0000\] {
+  --tw-text-opacity: 1;
+  color: rgb(255 0 0 / var(--tw-text-opacity));
+}
+
+.text-\[\#\] {
+  color: #;
 }
 
 .text-\[\#a1a1a1\] {
@@ -3407,8 +3439,8 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.text-\[\] {
-  color: ;
+.text-\[a1a1a1\] {
+  color: a1a1a1;
 }
 
 .text-black {
@@ -4090,10 +4122,6 @@ video {
     display: none;
   }
 
-  .md\:h-\[115vh\] {
-    height: 115vh;
-  }
-
   .md\:h-\[160vh\] {
     height: 160vh;
   }
@@ -4124,14 +4152,6 @@ video {
 
   .md\:h-\[65vh\] {
     height: 65vh;
-  }
-
-  .md\:h-\[1vh\] {
-    height: 1vh;
-  }
-
-  .md\:h-\[150vh\] {
-    height: 150vh;
   }
 
   .md\:w-\[100\%\] {
@@ -4447,16 +4467,16 @@ video {
     width: 80%;
   }
 
+  .lg\:w-\[86\%\] {
+    width: 86%;
+  }
+
   .lg\:w-\[90\%\] {
     width: 90%;
   }
 
   .lg\:w-full {
     width: 100%;
-  }
-
-  .lg\:w-\[86\%\] {
-    width: 86%;
   }
 
   .lg\:grid-cols-4 {
@@ -4531,6 +4551,11 @@ video {
     line-height: 2.5rem;
   }
 
+  .lg\:text-5xl {
+    font-size: 3rem;
+    line-height: 1;
+  }
+
   .lg\:text-6xl {
     font-size: 3.75rem;
     line-height: 1;
@@ -4553,11 +4578,6 @@ video {
   .lg\:text-xl {
     font-size: 1.25rem;
     line-height: 1.75rem;
-  }
-
-  .lg\:text-5xl {
-    font-size: 3rem;
-    line-height: 1;
   }
 
   .lg\:leading-\[50px\] {
