--- a/css/output.css
+++ b/css/output.css
@@ -995,6 +995,10 @@ video {
   height: 100px;
 }
 
+.h-\[110vh\] {
+  height: 110vh;
+}
+
 .h-\[120vh\] {
   height: 120vh;
 }
@@ -1055,24 +1059,12 @@ video {
   height: 85%;
 }
 
-.h-\[90vh\] {
-  height: 90vh;
-}
-
 .h-auto {
   height: auto;
 }
 
 .h-full {
   height: 100%;
-}
-
-.h-\[100vh\] {
-  height: 100vh;
-}
-
-.h-\[110vh\] {
-  height: 110vh;
 }
 
 .w-10 {
@@ -1113,6 +1105,10 @@ video {
 
 .w-\[120\%\] {
   width: 120%;
+}
+
+.w-\[130\%\] {
+  width: 130%;
 }
 
 .w-\[140\%\] {
@@ -1905,6 +1901,10 @@ video {
   gap: 8px;
 }
 
+.gap-\[90px\] {
+  gap: 90px;
+}
+
 .space-x-2 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0;
   margin-right: calc(0.5rem * var(--tw-space-x-reverse));
@@ -2538,6 +2538,11 @@ video {
   background-color: rgb(22 163 74 / var(--tw-bg-opacity));
 }
 
+.bg-red-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
+}
+
 .bg-red-600 {
   --tw-bg-opacity: 1;
   background-color: rgb(220 38 38 / var(--tw-bg-opacity));
@@ -2802,6 +2807,11 @@ video {
   padding-right: 30px;
 }
 
+.px-\[3px\] {
+  padding-left: 3px;
+  padding-right: 3px;
+}
+
 .px-\[3rem\] {
   padding-left: 3rem;
   padding-right: 3rem;
@@ -3009,6 +3019,10 @@ video {
   padding-bottom: 25px;
 }
 
+.pb-\[2rem\] {
+  padding-bottom: 2rem;
+}
+
 .pb-\[32px\] {
   padding-bottom: 32px;
 }
@@ -3027,6 +3041,10 @@ video {
 
 .pl-\[7rem\] {
   padding-left: 7rem;
+}
+
+.pl-\[8rem\] {
+  padding-left: 8rem;
 }
 
 .pr-\[20px\] {
@@ -3165,6 +3183,10 @@ video {
   font-size: 18px;
 }
 
+.text-\[19px\] {
+  font-size: 19px;
+}
+
 .text-\[20px\] {
   font-size: 20px;
 }
@@ -3187,6 +3209,10 @@ video {
 
 .text-\[35px\] {
   font-size: 35px;
+}
+
+.text-\[38px\] {
+  font-size: 38px;
 }
 
 .text-\[40px\] {
@@ -3332,8 +3358,8 @@ video {
   line-height: 2rem;
 }
 
-.leading-\[50px\] {
-  line-height: 50px;
+.leading-\[40px\] {
+  line-height: 40px;
 }
 
 .leading-\[56px\] {
@@ -3342,10 +3368,6 @@ video {
 
 .leading-tight {
   line-height: 1.25;
-}
-
-.leading-\[40px\] {
-  line-height: 40px;
 }
 
 .text-\[\#01C38D\] {
@@ -3375,6 +3397,11 @@ video {
 .text-\[\#35d49a\] {
   --tw-text-opacity: 1;
   color: rgb(53 212 154 / var(--tw-text-opacity));
+}
+
+.text-\[\#735EFF\] {
+  --tw-text-opacity: 1;
+  color: rgb(115 94 255 / var(--tw-text-opacity));
 }
 
 .text-\[\#7c818b\] {
@@ -3458,10 +3485,6 @@ video {
 .text-yellow-200 {
   --tw-text-opacity: 1;
   color: rgb(254 240 138 / var(--tw-text-opacity));
-}
-
-.text-\[\] {
-  color: ;
 }
 
 .underline {
@@ -3977,12 +4000,32 @@ video {
     width: 100%;
   }
 
+  .sm\:w-\[50\%\] {
+    width: 50%;
+  }
+
   .sm\:w-\[60\%\] {
     width: 60%;
   }
 
   .sm\:w-\[70\%\] {
     width: 70%;
+  }
+
+  .sm\:w-\[0\%\] {
+    width: 0%;
+  }
+
+  .sm\:w-\[30\%\] {
+    width: 30%;
+  }
+
+  .sm\:w-\[20\%\] {
+    width: 20%;
+  }
+
+  .sm\:flex-col {
+    flex-direction: column;
   }
 
   .sm\:flex-col-reverse {
@@ -3993,12 +4036,51 @@ video {
     align-items: center;
   }
 
+  .sm\:justify-center {
+    justify-content: center;
+  }
+
+  .sm\:gap-\[\] {
+    gap: ;
+  }
+
+  .sm\:gap-\[5\] {
+    gap: 5;
+  }
+
+  .sm\:gap-\[50px\] {
+    gap: 50px;
+  }
+
+  .sm\:gap-\[30px\] {
+    gap: 30px;
+  }
+
+  .sm\:px-\[\] {
+    padding-left: ;
+    padding-right: ;
+  }
+
+  .sm\:px-\[1rem\] {
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+
+  .sm\:px-\[10px\] {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
   .sm\:text-center {
     text-align: center;
   }
 
   .sm\:text-\[32px\] {
     font-size: 32px;
+  }
+
+  .sm\:text-\[60px\] {
+    font-size: 60px;
   }
 
   .sm\:text-lg {
@@ -4011,8 +4093,24 @@ video {
     line-height: 1.25rem;
   }
 
+  .sm\:text-\[20px\] {
+    font-size: 20px;
+  }
+
+  .sm\:text-\[100px\] {
+    font-size: 100px;
+  }
+
+  .sm\:text-\[30px\] {
+    font-size: 30px;
+  }
+
   .sm\:font-bold {
     font-weight: 700;
+  }
+
+  .sm\:text-\[\] {
+    color: ;
   }
 
   .sm\:underline {
@@ -4035,11 +4133,6 @@ video {
 
   .md\:top-32 {
     top: 8rem;
-  }
-
-  .md\:mx-0 {
-    margin-left: 0px;
-    margin-right: 0px;
   }
 
   .md\:mx-auto {
@@ -4077,20 +4170,12 @@ video {
     margin-top: 2rem;
   }
 
-  .md\:block {
-    display: block;
-  }
-
   .md\:flex {
     display: flex;
   }
 
   .md\:hidden {
     display: none;
-  }
-
-  .md\:h-\[115vh\] {
-    height: 115vh;
   }
 
   .md\:h-\[160vh\] {
@@ -4123,14 +4208,6 @@ video {
 
   .md\:h-\[65vh\] {
     height: 65vh;
-  }
-
-  .md\:h-\[1vh\] {
-    height: 1vh;
-  }
-
-  .md\:h-\[150vh\] {
-    height: 150vh;
   }
 
   .md\:w-\[100\%\] {
@@ -4221,10 +4298,6 @@ video {
     justify-content: center;
   }
 
-  .md\:justify-between {
-    justify-content: space-between;
-  }
-
   .md\:gap-10 {
     gap: 2.5rem;
   }
@@ -4251,6 +4324,10 @@ video {
 
   .md\:gap-\[250px\] {
     gap: 250px;
+  }
+
+  .md\:gap-\[65px\] {
+    gap: 65px;
   }
 
   .md\:gap-\[70px\] {
@@ -4328,6 +4405,10 @@ video {
   .md\:text-6xl {
     font-size: 3.75rem;
     line-height: 1;
+  }
+
+  .md\:text-\[60px\] {
+    font-size: 60px;
   }
 
   .md\:text-base {
@@ -4422,6 +4503,10 @@ video {
     width: 50%;
   }
 
+  .lg\:w-\[55\%\] {
+    width: 55%;
+  }
+
   .lg\:w-\[60\%\] {
     width: 60%;
   }
@@ -4446,16 +4531,16 @@ video {
     width: 80%;
   }
 
+  .lg\:w-\[86\%\] {
+    width: 86%;
+  }
+
   .lg\:w-\[90\%\] {
     width: 90%;
   }
 
   .lg\:w-full {
     width: 100%;
-  }
-
-  .lg\:w-\[86\%\] {
-    width: 86%;
   }
 
   .lg\:grid-cols-4 {
@@ -4474,12 +4559,16 @@ video {
     align-items: center;
   }
 
-  .lg\:gap-\[400px\] {
-    gap: 400px;
+  .lg\:justify-center {
+    justify-content: center;
   }
 
   .lg\:gap-\[50px\] {
     gap: 50px;
+  }
+
+  .lg\:gap-\[70px\] {
+    gap: 70px;
   }
 
   .lg\:px-10 {
@@ -4512,6 +4601,11 @@ video {
     padding-bottom: 0.75rem;
   }
 
+  .lg\:px-\[10px\] {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
   .lg\:text-left {
     text-align: left;
   }
@@ -4528,6 +4622,11 @@ video {
   .lg\:text-4xl {
     font-size: 2.25rem;
     line-height: 2.5rem;
+  }
+
+  .lg\:text-5xl {
+    font-size: 3rem;
+    line-height: 1;
   }
 
   .lg\:text-6xl {
@@ -4554,11 +4653,6 @@ video {
     line-height: 1.75rem;
   }
 
-  .lg\:text-5xl {
-    font-size: 3rem;
-    line-height: 1;
-  }
-
   .lg\:leading-\[50px\] {
     line-height: 50px;
   }
@@ -4569,6 +4663,10 @@ video {
 
   .lg\:leading-\[86px\] {
     line-height: 86px;
+  }
+
+  .lg\:text-\[70pxpx\] {
+    color: 70pxpx;
   }
 }
 
