--- a/css/output.css
+++ b/css/output.css
@@ -999,10 +999,6 @@ video {
   height: 110vh;
 }
 
-.h-\[110vh\] {
-  height: 110vh;
-}
-
 .h-\[150px\] {
   height: 150px;
 }
@@ -2543,11 +2539,6 @@ video {
   background-color: rgb(22 163 74 / var(--tw-bg-opacity));
 }
 
-.bg-red-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
-}
-
 .bg-red-600 {
   --tw-bg-opacity: 1;
   background-color: rgb(220 38 38 / var(--tw-bg-opacity));
@@ -2560,6 +2551,11 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-red-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
 }
 
 .bg-gradient-to-b {
@@ -2816,11 +2812,6 @@ video {
   padding-right: 30px;
 }
 
-.px-\[3px\] {
-  padding-left: 3px;
-  padding-right: 3px;
-}
-
 .px-\[3rem\] {
   padding-left: 3rem;
   padding-right: 3rem;
@@ -3016,6 +3007,11 @@ video {
   padding-bottom: 8rem;
 }
 
+.px-\[3px\] {
+  padding-left: 3px;
+  padding-right: 3px;
+}
+
 .pb-\[10px\] {
   padding-bottom: 10px;
 }
@@ -3056,10 +3052,6 @@ video {
   padding-left: 7rem;
 }
 
-.pl-\[8rem\] {
-  padding-left: 8rem;
-}
-
 .pr-\[20px\] {
   padding-right: 20px;
 }
@@ -3090,6 +3082,14 @@ video {
 
 .pt-\[4rem\] {
   padding-top: 4rem;
+}
+
+.pb-\[2rem\] {
+  padding-bottom: 2rem;
+}
+
+.pl-\[8rem\] {
+  padding-left: 8rem;
 }
 
 .text-left {
@@ -3200,10 +3200,6 @@ video {
   font-size: 18px;
 }
 
-.text-\[19px\] {
-  font-size: 19px;
-}
-
 .text-\[20px\] {
   font-size: 20px;
 }
@@ -3269,6 +3265,14 @@ video {
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
+}
+
+.text-\[19px\] {
+  font-size: 19px;
+}
+
+.text-\[38px\] {
+  font-size: 38px;
 }
 
 .font-bold {
@@ -3550,6 +3554,11 @@ video {
 .text-yellow-200 {
   --tw-text-opacity: 1;
   color: rgb(254 240 138 / var(--tw-text-opacity));
+}
+
+.text-\[\#735EFF\] {
+  --tw-text-opacity: 1;
+  color: rgb(115 94 255 / var(--tw-text-opacity));
 }
 
 .underline {
@@ -4085,6 +4094,10 @@ video {
     flex-direction: row;
   }
 
+  .sm\:flex-col {
+    flex-direction: column;
+  }
+
   .sm\:flex-col-reverse {
     flex-direction: column-reverse;
   }
@@ -4093,39 +4106,8 @@ video {
     align-items: center;
   }
 
-  .sm\:justify-center {
-    justify-content: center;
-  }
-
-  .sm\:gap-\[\] {
-    gap: ;
-  }
-
-  .sm\:gap-\[5\] {
-    gap: 5;
-  }
-
-  .sm\:gap-\[50px\] {
-    gap: 50px;
-  }
-
   .sm\:gap-\[30px\] {
     gap: 30px;
-  }
-
-  .sm\:px-\[\] {
-    padding-left: ;
-    padding-right: ;
-  }
-
-  .sm\:px-\[1rem\] {
-    padding-left: 1rem;
-    padding-right: 1rem;
-  }
-
-  .sm\:px-\[10px\] {
-    padding-left: 10px;
-    padding-right: 10px;
   }
 
   .sm\:text-center {
@@ -4134,10 +4116,6 @@ video {
 
   .sm\:text-\[32px\] {
     font-size: 32px;
-  }
-
-  .sm\:text-\[60px\] {
-    font-size: 60px;
   }
 
   .sm\:text-lg {
@@ -4150,10 +4128,6 @@ video {
     line-height: 1.25rem;
   }
 
-  .sm\:text-\[20px\] {
-    font-size: 20px;
-  }
-
   .sm\:text-\[100px\] {
     font-size: 100px;
   }
@@ -4164,10 +4138,6 @@ video {
 
   .sm\:font-bold {
     font-weight: 700;
-  }
-
-  .sm\:text-\[\] {
-    color: ;
   }
 
   .sm\:underline {
@@ -4392,6 +4362,10 @@ video {
     gap: 70px;
   }
 
+  .md\:gap-\[65px\] {
+    gap: 65px;
+  }
+
   .md\:border-none {
     border-style: none;
   }
@@ -4465,10 +4439,6 @@ video {
     line-height: 1;
   }
 
-  .md\:text-\[60px\] {
-    font-size: 60px;
-  }
-
   .md\:text-base {
     font-size: 1rem;
     line-height: 1.5rem;
@@ -4487,6 +4457,10 @@ video {
   .md\:text-xl {
     font-size: 1.25rem;
     line-height: 1.75rem;
+  }
+
+  .md\:text-\[60px\] {
+    font-size: 60px;
   }
 
   .md\:font-bold {
@@ -4577,10 +4551,6 @@ video {
     width: 50%;
   }
 
-  .lg\:w-\[55\%\] {
-    width: 55%;
-  }
-
   .lg\:w-\[60\%\] {
     width: 60%;
   }
@@ -4621,6 +4591,10 @@ video {
     width: 100%;
   }
 
+  .lg\:w-\[55\%\] {
+    width: 55%;
+  }
+
   .lg\:grid-cols-4 {
     grid-template-columns: repeat(4, minmax(0, 1fr));
   }
@@ -4643,6 +4617,10 @@ video {
 
   .lg\:gap-\[90px\] {
     gap: 90px;
+  }
+
+  .lg\:gap-\[70px\] {
+    gap: 70px;
   }
 
   .lg\:px-10 {
@@ -4733,6 +4711,10 @@ video {
   .lg\:text-xl {
     font-size: 1.25rem;
     line-height: 1.75rem;
+  }
+
+  .lg\:text-\[70px\] {
+    font-size: 70px;
   }
 
   .lg\:font-bold {
