--- a/css/homeStyle.css
+++ b/css/homeStyle.css
@@ -142,6 +142,23 @@ html,body {
     font-weight: bold;
 }
 
-.opa {
-    opacity: 1;
+::-webkit-scrollbar {
+    display: none; /* Safari and Chrome */
+}
+
+.z-indexed {
+    z-index: 400;
+}
+
+#menuDisplay{
+    top: 0;
+}
+
+.high:hover h1 {
+    color: #01C38D; /* Change the color of the h1 text to green */
+}
+
+.rotate-180 {
+    transform: rotate(180deg);
+    transition: transform 0.3s ease; /* Add a smooth transition */
 }
