--- a/css/output.css
+++ b/css/output.css
@@ -671,12 +671,16 @@ video {
   left: 1.5rem;
 }
 
-.top-14 {
-  top: 3.5rem;
+.top-\[0\] {
+  top: 0;
 }
 
-.top-7 {
-  top: 1.75rem;
+.top-\[420px\] {
+  top: 420px;
+}
+
+.top-\[550px\] {
+  top: 550px;
 }
 
 .isolate {
@@ -820,6 +824,14 @@ video {
   margin-bottom: auto;
 }
 
+.mb-3 {
+  margin-bottom: 0.75rem;
+}
+
+.mb-\[10px\] {
+  margin-bottom: 10px;
+}
+
 .mb-\[20px\] {
   margin-bottom: 20px;
 }
@@ -882,6 +894,14 @@ video {
 
 .mt-\[50px\] {
   margin-top: 50px;
+}
+
+.mb-\[5px\] {
+  margin-bottom: 5px;
+}
+
+.mb-\[4px\] {
+  margin-bottom: 4px;
 }
 
 .box-border {
@@ -995,6 +1015,10 @@ video {
   height: 100px;
 }
 
+.h-\[100vh\] {
+  height: 100vh;
+}
+
 .h-\[110vh\] {
   height: 110vh;
 }
@@ -1035,14 +1059,6 @@ video {
   height: 350px;
 }
 
-.h-\[47rem\] {
-  height: 47rem;
-}
-
-.h-\[50vh\] {
-  height: 50vh;
-}
-
 .h-\[600px\] {
   height: 600px;
 }
@@ -1061,6 +1077,10 @@ video {
 
 .w-10 {
   width: 2.5rem;
+}
+
+.w-12 {
+  width: 3rem;
 }
 
 .w-14 {
@@ -1115,16 +1135,16 @@ video {
   width: 20%;
 }
 
+.w-\[200px\] {
+  width: 200px;
+}
+
 .w-\[25\%\] {
   width: 25%;
 }
 
 .w-\[30\%\] {
   width: 30%;
-}
-
-.w-\[300px\] {
-  width: 300px;
 }
 
 .w-\[33\%\] {
@@ -1167,10 +1187,6 @@ video {
   width: 58%;
 }
 
-.w-\[60\%\] {
-  width: 60%;
-}
-
 .w-\[65\%\] {
   width: 65%;
 }
@@ -1191,10 +1207,6 @@ video {
   width: 80%;
 }
 
-.w-\[80px\] {
-  width: 80px;
-}
-
 .w-\[85\%\] {
   width: 85%;
 }
@@ -1209,10 +1221,6 @@ video {
 
 .w-\[95\%\] {
   width: 95%;
-}
-
-.w-\[96\%\] {
-  width: 96%;
 }
 
 .w-\[97\%\] {
@@ -1273,6 +1281,11 @@ video {
 
 .border-separate {
   border-collapse: separate;
+}
+
+.rotate-180 {
+  --tw-rotate: 180deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .\!transform {
@@ -1889,6 +1902,10 @@ video {
   gap: 65px;
 }
 
+.gap-\[7px\] {
+  gap: 7px;
+}
+
 .gap-\[80px\] {
   gap: 80px;
 }
@@ -2233,6 +2250,10 @@ video {
   border-radius: 30px;
 }
 
+.rounded-\[35px\] {
+  border-radius: 35px;
+}
+
 .rounded-full {
   border-radius: 9999px;
 }
@@ -2271,11 +2292,6 @@ video {
 .rounded-r {
   border-top-right-radius: 0.25rem;
   border-bottom-right-radius: 0.25rem;
-}
-
-.rounded-r-md {
-  border-top-right-radius: 0.375rem;
-  border-bottom-right-radius: 0.375rem;
 }
 
 .rounded-s {
@@ -2504,6 +2520,11 @@ video {
   background-color: rgb(229 249 243 / var(--tw-bg-opacity));
 }
 
+.bg-\[\#E6F9F4\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(230 249 244 / var(--tw-bg-opacity));
+}
+
 .bg-\[\#F6F7F8\] {
   --tw-bg-opacity: 1;
   background-color: rgb(246 247 248 / var(--tw-bg-opacity));
@@ -2539,6 +2560,11 @@ video {
   background-color: rgb(22 163 74 / var(--tw-bg-opacity));
 }
 
+.bg-red-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
+}
+
 .bg-red-600 {
   --tw-bg-opacity: 1;
   background-color: rgb(220 38 38 / var(--tw-bg-opacity));
@@ -2551,11 +2577,6 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.bg-red-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
 }
 
 .bg-gradient-to-b {
@@ -2708,8 +2729,8 @@ video {
   padding: 1rem;
 }
 
-.p-8 {
-  padding: 2rem;
+.p-44 {
+  padding: 11rem;
 }
 
 .p-\[10px\] {
@@ -2720,16 +2741,16 @@ video {
   padding: 15px;
 }
 
+.p-\[1rem\] {
+  padding: 1rem;
+}
+
 .p-\[20px\] {
   padding: 20px;
 }
 
 .p-\[30px\] {
   padding: 30px;
-}
-
-.p-\[8px\] {
-  padding: 8px;
 }
 
 .px-10 {
@@ -2745,6 +2766,11 @@ video {
 .px-4 {
   padding-left: 1rem;
   padding-right: 1rem;
+}
+
+.px-5 {
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
 }
 
 .px-6 {
@@ -2810,6 +2836,11 @@ video {
 .px-\[30px\] {
   padding-left: 30px;
   padding-right: 30px;
+}
+
+.px-\[3px\] {
+  padding-left: 3px;
+  padding-right: 3px;
 }
 
 .px-\[3rem\] {
@@ -3007,11 +3038,6 @@ video {
   padding-bottom: 8rem;
 }
 
-.px-\[3px\] {
-  padding-left: 3px;
-  padding-right: 3px;
-}
-
 .pb-\[10px\] {
   padding-bottom: 10px;
 }
@@ -3026,6 +3052,10 @@ video {
 
 .pb-\[25px\] {
   padding-bottom: 25px;
+}
+
+.pb-\[2rem\] {
+  padding-bottom: 2rem;
 }
 
 .pb-\[30px\] {
@@ -3050,6 +3080,10 @@ video {
 
 .pl-\[7rem\] {
   padding-left: 7rem;
+}
+
+.pl-\[8rem\] {
+  padding-left: 8rem;
 }
 
 .pr-\[20px\] {
@@ -3082,14 +3116,6 @@ video {
 
 .pt-\[4rem\] {
   padding-top: 4rem;
-}
-
-.pb-\[2rem\] {
-  padding-bottom: 2rem;
-}
-
-.pl-\[8rem\] {
-  padding-left: 8rem;
 }
 
 .text-left {
@@ -3200,6 +3226,10 @@ video {
   font-size: 18px;
 }
 
+.text-\[19px\] {
+  font-size: 19px;
+}
+
 .text-\[20px\] {
   font-size: 20px;
 }
@@ -3220,12 +3250,16 @@ video {
   font-size: 30px;
 }
 
+.text-\[33px\] {
+  font-size: 33px;
+}
+
 .text-\[35px\] {
   font-size: 35px;
 }
 
-.text-\[37px\] {
-  font-size: 37px;
+.text-\[38px\] {
+  font-size: 38px;
 }
 
 .text-\[40px\] {
@@ -3265,14 +3299,6 @@ video {
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
-}
-
-.text-\[19px\] {
-  font-size: 19px;
-}
-
-.text-\[38px\] {
-  font-size: 38px;
 }
 
 .font-bold {
@@ -3400,6 +3426,11 @@ video {
   color: rgb(1 156 113 / var(--tw-text-opacity));
 }
 
+.text-\[\#019c71\] {
+  --tw-text-opacity: 1;
+  color: rgb(1 156 113 / var(--tw-text-opacity));
+}
+
 .text-\[\#01C38D\] {
   --tw-text-opacity: 1;
   color: rgb(1 195 141 / var(--tw-text-opacity));
@@ -3415,29 +3446,9 @@ video {
   color: rgb(18 227 188 / var(--tw-text-opacity));
 }
 
-.text-\[\#1877F2\] {
-  --tw-text-opacity: 1;
-  color: rgb(24 119 242 / var(--tw-text-opacity));
-}
-
 .text-\[\#19C897\] {
   --tw-text-opacity: 1;
   color: rgb(25 200 151 / var(--tw-text-opacity));
-}
-
-.text-\[\#1DA1F2\] {
-  --tw-text-opacity: 1;
-  color: rgb(29 161 242 / var(--tw-text-opacity));
-}
-
-.text-\[\#26A5E4\] {
-  --tw-text-opacity: 1;
-  color: rgb(38 165 228 / var(--tw-text-opacity));
-}
-
-.text-\[\#2867B2\] {
-  --tw-text-opacity: 1;
-  color: rgb(40 103 178 / var(--tw-text-opacity));
 }
 
 .text-\[\#336699\]\/\[\.35\] {
@@ -3449,29 +3460,14 @@ video {
   color: rgb(53 212 154 / var(--tw-text-opacity));
 }
 
-.text-\[\#69C9D0\] {
+.text-\[\#735EFF\] {
   --tw-text-opacity: 1;
-  color: rgb(105 201 208 / var(--tw-text-opacity));
-}
-
-.text-\[\#7289da\] {
-  --tw-text-opacity: 1;
-  color: rgb(114 137 218 / var(--tw-text-opacity));
+  color: rgb(115 94 255 / var(--tw-text-opacity));
 }
 
 .text-\[\#7c818b\] {
   --tw-text-opacity: 1;
   color: rgb(124 129 139 / var(--tw-text-opacity));
-}
-
-.text-\[\#C13584\] {
-  --tw-text-opacity: 1;
-  color: rgb(193 53 132 / var(--tw-text-opacity));
-}
-
-.text-\[\#FF0000\] {
-  --tw-text-opacity: 1;
-  color: rgb(255 0 0 / var(--tw-text-opacity));
 }
 
 .text-\[\#\] {
@@ -3556,11 +3552,6 @@ video {
   color: rgb(254 240 138 / var(--tw-text-opacity));
 }
 
-.text-\[\#735EFF\] {
-  --tw-text-opacity: 1;
-  color: rgb(115 94 255 / var(--tw-text-opacity));
-}
-
 .underline {
   text-decoration-line: underline;
 }
@@ -3615,8 +3606,8 @@ video {
   opacity: 0.85;
 }
 
-.opacity-90 {
-  opacity: 0.9;
+.opacity-95 {
+  opacity: 0.95;
 }
 
 .bg-blend-normal {
@@ -4066,10 +4057,6 @@ video {
     margin-bottom: 60px;
   }
 
-  .sm\:h-\[44rem\] {
-    height: 44rem;
-  }
-
   .sm\:h-\[50vh\] {
     height: 50vh;
   }
@@ -4114,6 +4101,10 @@ video {
     text-align: center;
   }
 
+  .sm\:text-\[30px\] {
+    font-size: 30px;
+  }
+
   .sm\:text-\[32px\] {
     font-size: 32px;
   }
@@ -4126,14 +4117,6 @@ video {
   .sm\:text-sm {
     font-size: 0.875rem;
     line-height: 1.25rem;
-  }
-
-  .sm\:text-\[100px\] {
-    font-size: 100px;
-  }
-
-  .sm\:text-\[30px\] {
-    font-size: 30px;
   }
 
   .sm\:font-bold {
@@ -4186,6 +4169,10 @@ video {
     margin-bottom: 15px;
   }
 
+  .md\:mb-\[60px\] {
+    margin-bottom: 60px;
+  }
+
   .md\:mb-\[80px\] {
     margin-bottom: 80px;
   }
@@ -4222,10 +4209,6 @@ video {
     height: 30%;
   }
 
-  .md\:h-\[30px\] {
-    height: 30px;
-  }
-
   .md\:h-\[370px\] {
     height: 370px;
   }
@@ -4236,10 +4219,6 @@ video {
 
   .md\:h-\[65vh\] {
     height: 65vh;
-  }
-
-  .md\:h-\[80vh\] {
-    height: 80vh;
   }
 
   .md\:w-\[100\%\] {
@@ -4310,6 +4289,10 @@ video {
     flex-direction: column;
   }
 
+  .md\:flex-wrap {
+    flex-wrap: wrap;
+  }
+
   .md\:items-start {
     align-items: flex-start;
   }
@@ -4334,6 +4317,10 @@ video {
     gap: 2.5rem;
   }
 
+  .md\:gap-14 {
+    gap: 3.5rem;
+  }
+
   .md\:gap-6 {
     gap: 1.5rem;
   }
@@ -4354,16 +4341,20 @@ video {
     gap: 250px;
   }
 
+  .md\:gap-\[30px\] {
+    gap: 30px;
+  }
+
   .md\:gap-\[60px\] {
     gap: 60px;
   }
 
-  .md\:gap-\[70px\] {
-    gap: 70px;
-  }
-
   .md\:gap-\[65px\] {
     gap: 65px;
+  }
+
+  .md\:gap-\[70px\] {
+    gap: 70px;
   }
 
   .md\:border-none {
@@ -4387,14 +4378,29 @@ video {
     padding-right: 2.5rem;
   }
 
+  .md\:px-2 {
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+  }
+
   .md\:px-20 {
     padding-left: 5rem;
     padding-right: 5rem;
   }
 
+  .md\:px-6 {
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+  }
+
   .md\:px-\[0px\] {
     padding-left: 0px;
     padding-right: 0px;
+  }
+
+  .md\:px-\[3rem\] {
+    padding-left: 3rem;
+    padding-right: 3rem;
   }
 
   .md\:py-\[10px\] {
@@ -4439,6 +4445,10 @@ video {
     line-height: 1;
   }
 
+  .md\:text-\[60px\] {
+    font-size: 60px;
+  }
+
   .md\:text-base {
     font-size: 1rem;
     line-height: 1.5rem;
@@ -4459,10 +4469,6 @@ video {
     line-height: 1.75rem;
   }
 
-  .md\:text-\[60px\] {
-    font-size: 60px;
-  }
-
   .md\:font-bold {
     font-weight: 700;
   }
@@ -4479,6 +4485,10 @@ video {
     line-height: 56px;
   }
 
+  .md\:leading-\[66px\] {
+    line-height: 66px;
+  }
+
   .md\:leading-\[76px\] {
     line-height: 76px;
   }
@@ -4493,6 +4503,10 @@ video {
   .lg\:my-\[20px\] {
     margin-top: 20px;
     margin-bottom: 20px;
+  }
+
+  .lg\:mt-\[15px\] {
+    margin-top: 15px;
   }
 
   .lg\:block {
@@ -4527,16 +4541,16 @@ video {
     height: 60vh;
   }
 
-  .lg\:h-\[70vh\] {
-    height: 70vh;
-  }
-
   .lg\:w-\[100\%\] {
     width: 100%;
   }
 
   .lg\:w-\[30\%\] {
     width: 30%;
+  }
+
+  .lg\:w-\[300px\] {
+    width: 300px;
   }
 
   .lg\:w-\[40\%\] {
@@ -4549,6 +4563,10 @@ video {
 
   .lg\:w-\[50\%\] {
     width: 50%;
+  }
+
+  .lg\:w-\[55\%\] {
+    width: 55%;
   }
 
   .lg\:w-\[60\%\] {
@@ -4591,10 +4609,6 @@ video {
     width: 100%;
   }
 
-  .lg\:w-\[55\%\] {
-    width: 55%;
-  }
-
   .lg\:grid-cols-4 {
     grid-template-columns: repeat(4, minmax(0, 1fr));
   }
@@ -4611,16 +4625,28 @@ video {
     align-items: center;
   }
 
+  .lg\:justify-start {
+    justify-content: flex-start;
+  }
+
+  .lg\:justify-center {
+    justify-content: center;
+  }
+
+  .lg\:gap-24 {
+    gap: 6rem;
+  }
+
   .lg\:gap-\[50px\] {
     gap: 50px;
   }
 
-  .lg\:gap-\[90px\] {
-    gap: 90px;
-  }
-
   .lg\:gap-\[70px\] {
     gap: 70px;
+  }
+
+  .lg\:gap-\[90px\] {
+    gap: 90px;
   }
 
   .lg\:px-10 {
@@ -4641,6 +4667,16 @@ video {
   .lg\:px-6 {
     padding-left: 1.5rem;
     padding-right: 1.5rem;
+  }
+
+  .lg\:px-8 {
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+
+  .lg\:px-\[4rem\] {
+    padding-left: 4rem;
+    padding-right: 4rem;
   }
 
   .lg\:py-2 {
@@ -4698,6 +4734,10 @@ video {
     font-size: 40px;
   }
 
+  .lg\:text-\[70px\] {
+    font-size: 70px;
+  }
+
   .lg\:text-lg {
     font-size: 1.125rem;
     line-height: 1.75rem;
@@ -4711,10 +4751,6 @@ video {
   .lg\:text-xl {
     font-size: 1.25rem;
     line-height: 1.75rem;
-  }
-
-  .lg\:text-\[70px\] {
-    font-size: 70px;
   }
 
   .lg\:font-bold {
@@ -4735,10 +4771,6 @@ video {
 
   .lg\:leading-\[86px\] {
     line-height: 86px;
-  }
-
-  .lg\:text-\[70pxpx\] {
-    color: 70pxpx;
   }
 }
 
