--- a/css/output.css
+++ b/css/output.css
@@ -731,8 +731,8 @@ video {
   clear: none;
 }
 
-.m-\[3\%\] {
-  margin: 3%;
+.m-\[20\%\] {
+  margin: 20%;
 }
 
 .mx-\[300px\] {
@@ -1085,6 +1085,10 @@ video {
 
 .w-48 {
   width: 12rem;
+}
+
+.w-5 {
+  width: 1.25rem;
 }
 
 .w-8 {
@@ -2539,6 +2543,11 @@ video {
   background-color: rgb(22 163 74 / var(--tw-bg-opacity));
 }
 
+.bg-red-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
+}
+
 .bg-red-600 {
   --tw-bg-opacity: 1;
   background-color: rgb(220 38 38 / var(--tw-bg-opacity));
@@ -2551,11 +2560,6 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.bg-red-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
 }
 
 .bg-gradient-to-b {
@@ -2782,11 +2786,6 @@ video {
   padding-right: 16px;
 }
 
-.px-\[18px\] {
-  padding-left: 18px;
-  padding-right: 18px;
-}
-
 .px-\[1rem\] {
   padding-left: 1rem;
   padding-right: 1rem;
@@ -2812,9 +2811,19 @@ video {
   padding-right: 30px;
 }
 
+.px-\[3px\] {
+  padding-left: 3px;
+  padding-right: 3px;
+}
+
 .px-\[3rem\] {
   padding-left: 3rem;
   padding-right: 3rem;
+}
+
+.px-\[40px\] {
+  padding-left: 40px;
+  padding-right: 40px;
 }
 
 .px-\[4rem\] {
@@ -2837,11 +2846,6 @@ video {
   padding-right: 5px;
 }
 
-.px-\[5rem\] {
-  padding-left: 5rem;
-  padding-right: 5rem;
-}
-
 .px-\[65px\] {
   padding-left: 65px;
   padding-right: 65px;
@@ -2855,11 +2859,6 @@ video {
 .px-\[7px\] {
   padding-left: 7px;
   padding-right: 7px;
-}
-
-.px-\[7rem\] {
-  padding-left: 7rem;
-  padding-right: 7rem;
 }
 
 .px-\[8px\] {
@@ -2937,11 +2936,6 @@ video {
   padding-bottom: 25px;
 }
 
-.py-\[2px\] {
-  padding-top: 2px;
-  padding-bottom: 2px;
-}
-
 .py-\[2rem\] {
   padding-top: 2rem;
   padding-bottom: 2rem;
@@ -3007,9 +3001,9 @@ video {
   padding-bottom: 8rem;
 }
 
-.px-\[3px\] {
-  padding-left: 3px;
-  padding-right: 3px;
+.py-\[rem\] {
+  padding-top: rem;
+  padding-bottom: rem;
 }
 
 .pb-\[10px\] {
@@ -3026,6 +3020,10 @@ video {
 
 .pb-\[25px\] {
   padding-bottom: 25px;
+}
+
+.pb-\[2rem\] {
+  padding-bottom: 2rem;
 }
 
 .pb-\[30px\] {
@@ -3050,6 +3048,10 @@ video {
 
 .pl-\[7rem\] {
   padding-left: 7rem;
+}
+
+.pl-\[8rem\] {
+  padding-left: 8rem;
 }
 
 .pr-\[20px\] {
@@ -3082,14 +3084,6 @@ video {
 
 .pt-\[4rem\] {
   padding-top: 4rem;
-}
-
-.pb-\[2rem\] {
-  padding-bottom: 2rem;
-}
-
-.pl-\[8rem\] {
-  padding-left: 8rem;
 }
 
 .text-left {
@@ -3172,6 +3166,10 @@ video {
   line-height: 1;
 }
 
+.text-\[11px\] {
+  font-size: 11px;
+}
+
 .text-\[12px\] {
   font-size: 12px;
 }
@@ -3198,6 +3196,10 @@ video {
 
 .text-\[18px\] {
   font-size: 18px;
+}
+
+.text-\[19px\] {
+  font-size: 19px;
 }
 
 .text-\[20px\] {
@@ -3228,12 +3230,12 @@ video {
   font-size: 37px;
 }
 
-.text-\[40px\] {
-  font-size: 40px;
+.text-\[38px\] {
+  font-size: 38px;
 }
 
-.text-\[43px\] {
-  font-size: 43px;
+.text-\[40px\] {
+  font-size: 40px;
 }
 
 .text-\[48px\] {
@@ -3265,14 +3267,6 @@ video {
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
-}
-
-.text-\[19px\] {
-  font-size: 19px;
-}
-
-.text-\[38px\] {
-  font-size: 38px;
 }
 
 .font-bold {
@@ -3459,6 +3453,11 @@ video {
   color: rgb(114 137 218 / var(--tw-text-opacity));
 }
 
+.text-\[\#735EFF\] {
+  --tw-text-opacity: 1;
+  color: rgb(115 94 255 / var(--tw-text-opacity));
+}
+
 .text-\[\#7c818b\] {
   --tw-text-opacity: 1;
   color: rgb(124 129 139 / var(--tw-text-opacity));
@@ -3554,11 +3553,6 @@ video {
 .text-yellow-200 {
   --tw-text-opacity: 1;
   color: rgb(254 240 138 / var(--tw-text-opacity));
-}
-
-.text-\[\#735EFF\] {
-  --tw-text-opacity: 1;
-  color: rgb(115 94 255 / var(--tw-text-opacity));
 }
 
 .underline {
@@ -4114,6 +4108,10 @@ video {
     text-align: center;
   }
 
+  .sm\:text-\[30px\] {
+    font-size: 30px;
+  }
+
   .sm\:text-\[32px\] {
     font-size: 32px;
   }
@@ -4126,14 +4124,6 @@ video {
   .sm\:text-sm {
     font-size: 0.875rem;
     line-height: 1.25rem;
-  }
-
-  .sm\:text-\[100px\] {
-    font-size: 100px;
-  }
-
-  .sm\:text-\[30px\] {
-    font-size: 30px;
   }
 
   .sm\:font-bold {
@@ -4246,6 +4236,10 @@ video {
     width: 100%;
   }
 
+  .md\:w-\[12\%\] {
+    width: 12%;
+  }
+
   .md\:w-\[20\%\] {
     width: 20%;
   }
@@ -4262,12 +4256,20 @@ video {
     width: 35%;
   }
 
+  .md\:w-\[40\%\] {
+    width: 40%;
+  }
+
   .md\:w-\[45\%\] {
     width: 45%;
   }
 
   .md\:w-\[50\%\] {
     width: 50%;
+  }
+
+  .md\:w-\[55\%\] {
+    width: 55%;
   }
 
   .md\:w-\[60\%\] {
@@ -4284,6 +4286,10 @@ video {
 
   .md\:w-\[90\%\] {
     width: 90%;
+  }
+
+  .md\:w-\[92\%\] {
+    width: 92%;
   }
 
   .md\:w-\[95\%\] {
@@ -4358,12 +4364,16 @@ video {
     gap: 60px;
   }
 
+  .md\:gap-\[65px\] {
+    gap: 65px;
+  }
+
   .md\:gap-\[70px\] {
     gap: 70px;
   }
 
-  .md\:gap-\[65px\] {
-    gap: 65px;
+  .md\:rounded-lg {
+    border-radius: 0.5rem;
   }
 
   .md\:border-none {
@@ -4397,14 +4407,44 @@ video {
     padding-right: 0px;
   }
 
+  .md\:px-\[1rem\] {
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+
+  .md\:px-\[2rem\] {
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+
   .md\:py-\[10px\] {
     padding-top: 10px;
     padding-bottom: 10px;
   }
 
+  .md\:py-\[15px\] {
+    padding-top: 15px;
+    padding-bottom: 15px;
+  }
+
+  .md\:py-\[1rem\] {
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+  }
+
   .md\:py-\[3rem\] {
     padding-top: 3rem;
     padding-bottom: 3rem;
+  }
+
+  .md\:py-\[5px\] {
+    padding-top: 5px;
+    padding-bottom: 5px;
+  }
+
+  .md\:py-\[8px\] {
+    padding-top: 8px;
+    padding-bottom: 8px;
   }
 
   .md\:pl-\[0px\] {
@@ -4439,6 +4479,34 @@ video {
     line-height: 1;
   }
 
+  .md\:text-\[18px\] {
+    font-size: 18px;
+  }
+
+  .md\:text-\[20px\] {
+    font-size: 20px;
+  }
+
+  .md\:text-\[28px\] {
+    font-size: 28px;
+  }
+
+  .md\:text-\[30px\] {
+    font-size: 30px;
+  }
+
+  .md\:text-\[35px\] {
+    font-size: 35px;
+  }
+
+  .md\:text-\[40px\] {
+    font-size: 40px;
+  }
+
+  .md\:text-\[50px\] {
+    font-size: 50px;
+  }
+
   .md\:text-base {
     font-size: 1rem;
     line-height: 1.5rem;
@@ -4459,10 +4527,6 @@ video {
     line-height: 1.75rem;
   }
 
-  .md\:text-\[60px\] {
-    font-size: 60px;
-  }
-
   .md\:font-bold {
     font-weight: 700;
   }
@@ -4481,6 +4545,10 @@ video {
 
   .md\:leading-\[76px\] {
     line-height: 76px;
+  }
+
+  .md\:leading-normal {
+    line-height: 1.5;
   }
 }
 
@@ -4531,8 +4599,36 @@ video {
     height: 70vh;
   }
 
+  .lg\:w-10 {
+    width: 2.5rem;
+  }
+
   .lg\:w-\[100\%\] {
     width: 100%;
+  }
+
+  .lg\:w-\[120\%\] {
+    width: 120%;
+  }
+
+  .lg\:w-\[14\%\] {
+    width: 14%;
+  }
+
+  .lg\:w-\[15\%\] {
+    width: 15%;
+  }
+
+  .lg\:w-\[150\%\] {
+    width: 150%;
+  }
+
+  .lg\:w-\[160\%\] {
+    width: 160%;
+  }
+
+  .lg\:w-\[25\%\] {
+    width: 25%;
   }
 
   .lg\:w-\[30\%\] {
@@ -4549,6 +4645,10 @@ video {
 
   .lg\:w-\[50\%\] {
     width: 50%;
+  }
+
+  .lg\:w-\[55\%\] {
+    width: 55%;
   }
 
   .lg\:w-\[60\%\] {
@@ -4591,10 +4691,6 @@ video {
     width: 100%;
   }
 
-  .lg\:w-\[55\%\] {
-    width: 55%;
-  }
-
   .lg\:grid-cols-4 {
     grid-template-columns: repeat(4, minmax(0, 1fr));
   }
@@ -4611,16 +4707,36 @@ video {
     align-items: center;
   }
 
+  .lg\:justify-between {
+    justify-content: space-between;
+  }
+
+  .lg\:gap-\[120px\] {
+    gap: 120px;
+  }
+
+  .lg\:gap-\[15px\] {
+    gap: 15px;
+  }
+
+  .lg\:gap-\[20px\] {
+    gap: 20px;
+  }
+
+  .lg\:gap-\[25px\] {
+    gap: 25px;
+  }
+
   .lg\:gap-\[50px\] {
     gap: 50px;
   }
 
-  .lg\:gap-\[90px\] {
-    gap: 90px;
-  }
-
   .lg\:gap-\[70px\] {
     gap: 70px;
+  }
+
+  .lg\:gap-\[90px\] {
+    gap: 90px;
   }
 
   .lg\:px-10 {
@@ -4643,6 +4759,56 @@ video {
     padding-right: 1.5rem;
   }
 
+  .lg\:px-\[12px\] {
+    padding-left: 12px;
+    padding-right: 12px;
+  }
+
+  .lg\:px-\[16px\] {
+    padding-left: 16px;
+    padding-right: 16px;
+  }
+
+  .lg\:px-\[18px\] {
+    padding-left: 18px;
+    padding-right: 18px;
+  }
+
+  .lg\:px-\[2rem\] {
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+
+  .lg\:px-\[3rem\] {
+    padding-left: 3rem;
+    padding-right: 3rem;
+  }
+
+  .lg\:px-\[55px\] {
+    padding-left: 55px;
+    padding-right: 55px;
+  }
+
+  .lg\:px-\[5rem\] {
+    padding-left: 5rem;
+    padding-right: 5rem;
+  }
+
+  .lg\:px-\[6rem\] {
+    padding-left: 6rem;
+    padding-right: 6rem;
+  }
+
+  .lg\:px-\[8px\] {
+    padding-left: 8px;
+    padding-right: 8px;
+  }
+
+  .lg\:py-0 {
+    padding-top: 0px;
+    padding-bottom: 0px;
+  }
+
   .lg\:py-2 {
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
@@ -4651,6 +4817,61 @@ video {
   .lg\:py-3 {
     padding-top: 0.75rem;
     padding-bottom: 0.75rem;
+  }
+
+  .lg\:py-\[1rem\] {
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+  }
+
+  .lg\:py-\[2rem\] {
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+  }
+
+  .lg\:py-\[30px\] {
+    padding-top: 30px;
+    padding-bottom: 30px;
+  }
+
+  .lg\:py-\[3px\] {
+    padding-top: 3px;
+    padding-bottom: 3px;
+  }
+
+  .lg\:py-\[3rem\] {
+    padding-top: 3rem;
+    padding-bottom: 3rem;
+  }
+
+  .lg\:py-\[40px\] {
+    padding-top: 40px;
+    padding-bottom: 40px;
+  }
+
+  .lg\:py-\[4rem\] {
+    padding-top: 4rem;
+    padding-bottom: 4rem;
+  }
+
+  .lg\:py-\[5rem\] {
+    padding-top: 5rem;
+    padding-bottom: 5rem;
+  }
+
+  .lg\:py-\[6px\] {
+    padding-top: 6px;
+    padding-bottom: 6px;
+  }
+
+  .lg\:py-\[8px\] {
+    padding-top: 8px;
+    padding-bottom: 8px;
+  }
+
+  .lg\:py-\[8rem\] {
+    padding-top: 8rem;
+    padding-bottom: 8rem;
   }
 
   .lg\:pb-\[20px\] {
@@ -4694,8 +4915,40 @@ video {
     line-height: 1;
   }
 
+  .lg\:text-\[15px\] {
+    font-size: 15px;
+  }
+
+  .lg\:text-\[16px\] {
+    font-size: 16px;
+  }
+
+  .lg\:text-\[18px\] {
+    font-size: 18px;
+  }
+
+  .lg\:text-\[20px\] {
+    font-size: 20px;
+  }
+
+  .lg\:text-\[25px\] {
+    font-size: 25px;
+  }
+
+  .lg\:text-\[30px\] {
+    font-size: 30px;
+  }
+
   .lg\:text-\[40px\] {
     font-size: 40px;
+  }
+
+  .lg\:text-\[43px\] {
+    font-size: 43px;
+  }
+
+  .lg\:text-\[65px\] {
+    font-size: 65px;
   }
 
   .lg\:text-lg {
@@ -4711,10 +4964,6 @@ video {
   .lg\:text-xl {
     font-size: 1.25rem;
     line-height: 1.75rem;
-  }
-
-  .lg\:text-\[70px\] {
-    font-size: 70px;
   }
 
   .lg\:font-bold {
@@ -4737,8 +4986,8 @@ video {
     line-height: 86px;
   }
 
-  .lg\:text-\[70pxpx\] {
-    color: 70pxpx;
+  .lg\:leading-tight {
+    line-height: 1.25;
   }
 }
 
